--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 </head>
 <body style="background-color:#252323;font-family:Varela Round;" text="#BB7D3C">
 {% include 'partials/navbar.html' %}
+{% include 'partials/alerts.html' %}
 {% block content %}
 
 {% endblock %}
