--- a/templates/Core/reg_home.html
+++ b/templates/Core/reg_home.html
@@ -48,6 +48,37 @@
             </div>
         </div>
         <!-- Modal Dialog for Each Plant -->
+
+        <div class="modal fade" id="addSensorModal{{plant.id}}" tabindex="1" aria-labelledby="addSensorModalLabel"
+             aria-hidden="true">
+            <!-- tabindex = -1 prevents this div from being displayed -->
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModal">{{plant.name}}</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="plant-info">
+                            <form action="{% url 'add_sensor' plant.id %}" method="post">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <label for="sensor_pin">Sensor Pin:</label>
+                                    <input type="text" id="sensor_pin" name="sensor_pin">
+                                </div>
+                                <div class="form-group">
+                                    <label for="sensor_type">Sensor Type:</label>
+                                    <input type="text" id="sensor_type" name="sensor_type">
+                                </div>
+                        <div class="modal-footer">
+                            <button>ADD</button>
+                        </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="modal fade" id="exampleModal{{plant.id}}" tabindex="-1" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
             <!-- tabindex = -1 prevents this div from being displayed -->
@@ -76,7 +107,8 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="nitrogen{{plant.id}}">Nitrogen:</label>
-                                    <input type="text" class="form-control" name="nitrogen" id="nitrogen{{plant.id}}"
+                                    <input type="text" class="form-control" name="nitrogen"
+                                           id="nitrogen{{plant.id}}"
                                            value="{{plant.nitrogen}}">
                                 </div>
                                 <div class="form-group">
@@ -87,7 +119,8 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="potassium{{plant.id}}">Potassium:</label>
-                                    <input type="text" class="form-control" name="potassium" id="potassium{{plant.id}}"
+                                    <input type="text" class="form-control" name="potassium"
+                                           id="potassium{{plant.id}}"
                                            value="{{plant.potassium}}">
                                 </div>
                                 <div class="form-group">
@@ -124,97 +157,12 @@
                                                 <div class="modal-body"><p>Are You Sure???</p></div>
                                                 <!-- Modal footer -->
                                                 <div class="modal-footer">
-                                                    <button type="submit" style="padding:0;" class="btn btn-primary"><a
+                                                    <button type="submit" style="padding:0;"
+                                                            class="btn btn-primary"><a
                                                             class="btn btn-primary"
                                                             style="text-decoration:none; color:white;"
-                                                            href="{% url 'delete_plant' plant.id %}">Delete</a></button>
-                            </form>
-                            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal fade" id="addSensorModal{{plant.id}}" tabindex="1" aria-labelledby="addSensorModalLabel"
-             aria-hidden="true">
-            <!-- tabindex = -1 prevents this div from being displayed -->
-            <div class="modal-dialog modal-xl">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModal">{{plant.name}}</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="plant-info">
-                            <div class="plant-img">
-                                <img src="{{ plant.photo.url }}">
-                            </div>
-                            <form action="{% url 'update_plant_c' plant.id %}" method="post">
-                                {% csrf_token %}
-                                <div class="form-group">
-                                    <label for="ec{{plant.id}}">EC:</label>
-                                    <input type="text" class="form-control" name="ec" id="ec{{plant.id}}"
-                                           value="{{plant.ec}}">
-                                </div>
-                                <div class="form-group">
-                                    <label for="ph{{plant.id}}">PH:</label>
-                                    <input type="text" class="form-control" name="ph" id="ph{{plant.id}}"
-                                           value="{{plant.ph}}">
-                                </div>
-                                <div class="form-group">
-                                    <label for="nitrogen{{plant.id}}">Nitrogen:</label>
-                                    <input type="text" class="form-control" name="nitrogen" id="nitrogen{{plant.id}}"
-                                           value="{{plant.nitrogen}}">
-                                </div>
-                                <div class="form-group">
-                                    <label for="phosphorus{{plant.id}}">Phosphorus:</label>
-                                    <input type="text" class="form-control" name="phosphorus"
-                                           id="phosphorus{{plant.id}}"
-                                           value="{{plant.phosphorus}}">
-                                </div>
-                                <div class="form-group">
-                                    <label for="potassium{{plant.id}}">Potassium:</label>
-                                    <input type="text" class="form-control" name="potassium" id="potassium{{plant.id}}"
-                                           value="{{plant.potassium}}">
-                                </div>
-                                <div class="form-group">
-                                    <label for="temperature{{plant.id}}">Temperature:</label>
-                                    <input type="text" class="form-control" name="temperature"
-                                           id="temperature{{plant.id}}" value="{{plant.temperature}}">
-                                </div>
-                                <div class="form-group">
-                                    <label for="ideal_moisture{{plant.id}}">Moisture:</label>
-                                    <input type="text" class="form-control" name="ideal_moisture"
-                                           id="ideal_moisture{{plant.id}}" value="{{plant.ideal_moisture}}">
-                                </div>
-                                <div class="form-group">
-                                    <label for="fertilizer{{plant.id}}">Fertilizer:</label>
-                                    <input type="text" class="form-control" name="fertilizer"
-                                           id="fertilizer{{plant.id}}" value="{{plant.fertilizer}}">
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="submit" class="btn btn-primary" id="saveButton{{plant.id}}">Save
-                                    </button>
-                                    <button class="btn btn-primary" data-toggle="modal"
-                                            data-target="#confirmDelete{{plant.id}}" type="button">Del Plant
-                                    </button>
-                                    <div class="modal fade" id="confirmDelete{{plant.id}}">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                <!-- Modal Header -->
-                                                <div class="modal-header">
-                                                    <h4 class="modal-title">Confirm Delete!!!</h4>
-                                                    <button type="button" class="close" data-dismiss="modal">&times;
+                                                            href="{% url 'delete_plant' plant.id %}">Delete</a>
                                                     </button>
-                                                </div>
-                                                <!-- Modal body -->
-                                                <div class="modal-body"><p>Are You Sure???</p></div>
-                                                <!-- Modal footer -->
-                                                <div class="modal-footer">
-                                                    <button type="submit" style="padding:0;" class="btn btn-primary"><a
-                                                            class="btn btn-primary"
-                                                            style="text-decoration:none; color:white;"
-                                                            href="{% url 'delete_plant' plant.id %}">Delete</a></button>
                             </form>
                             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                         </div>
@@ -428,6 +376,8 @@
               drawChart('detailChartPH{{plant.id}}', '{{plant.name}}', 'pH', detail_data['{{ plant.name }}'].date_time,detail_data['{{ plant.name }}'].m_ph);
           });
       {% endfor %}
+
+
 
 </script>
 {% endblock %}
