--- a/templates/Core/reg_home.html
+++ b/templates/Core/reg_home.html
@@ -55,7 +55,6 @@
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModal">{{plant.name}}</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -67,12 +66,11 @@
                                     <input type="text" id="sensor_pin" name="sensor_pin">
                                 </div>
                                 <div class="form-group">
-                                    <label for="sensor_type">Sensor Type:</label>
-                                    <input type="text" id="sensor_type" name="sensor_type">
+                                    <input type="hidden" id="sensor_type" name="sensor_type" value="0">
                                 </div>
-                        <div class="modal-footer">
-                            <button>ADD</button>
-                        </div>
+                                <div class="modal-footer">
+                                    <button>ADD</button>
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -217,7 +215,39 @@
     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
             data-bs-target="#AddPlantModal{{plant.id}}" style="margin-top:10px; padding:10px;">Add Plant
     </button>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+            data-bs-target="#addNPKSensorModal" style="margin-top:10px; padding:10px; margin-left:10px;">Add Sensor
+        <!--            data-bs-toggle targets id given to render                -->
+    </button>
 </div>
+        <div class="modal fade" id="addNPKSensorModal" tabindex="1" aria-labelledby="addNPKSensorModalLabel"
+             aria-hidden="true">
+            <!-- tabindex = -1 prevents this div from being displayed -->
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="plant-info">
+                            <form action="{% url 'add_sensor' %}" method="post">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <label for="sensor_pin">Sensor Pin:</label>
+                                    <input type="text" id="sensor_pin" name="sensor_pin">
+                                </div>
+                                <div class="form-group">
+                                    <input type="hidden" id="sensor_type" name="sensor_type" value="1">
+                                </div>
+                                <div class="modal-footer">
+                                    <button>ADD</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 <div class="modal fade" id="AddPlantModal{{plant.id}}" tabindex="-1" aria-labelledby="AddPlantModalLabel"
      aria-hidden="true">
     <!-- tabindex = -1 prevents this div from being displayed -->
@@ -376,6 +406,7 @@
               drawChart('detailChartPH{{plant.id}}', '{{plant.name}}', 'pH', detail_data['{{ plant.name }}'].date_time,detail_data['{{ plant.name }}'].m_ph);
           });
       {% endfor %}
+
 
 
 
