--- a/templates/Core/reg_home.html
+++ b/templates/Core/reg_home.html
@@ -379,12 +379,9 @@
               },
               options: {
                   responsive: true,
-                  maintainAspectRatio: true,
+                  maintainAspectRatio: false,
                   scales: {
                       y: {
-                          beginAtZero: true
-                      },
-                      x:{
                           beginAtZero: true
                       }
                   }
