--- a/static_files/css/style.css
+++ b/static_files/css/style.css
@@ -227,8 +227,8 @@ border:1px solid blue;
 
 /* New CSS rule for the chart */
 .chart-container {
-    width: 100%;
-    height: 400px; /* Or whatever height you want */
+    max-width: 1000px;
+    max-height: 1000px; /* Or whatever height you want */
 }
 
 .logo {
