--- a/templates/Core/reg_home.html
+++ b/templates/Core/reg_home.html
@@ -169,9 +169,9 @@
             </div>
         </div>
     </div>
-    <div class="row" style="max-width:500px;">
-        <div class="col-lg-7">
-            <div class="chart-container">
+    <div style="width:58vw;" class="row">
+        <div class="col-lg-6">
+            <div style="overflow:auto;">
                 {% for k, v in plotly_plots.items %}
                     {% if k == plant.name %}
                         {% for key, val in v.items %}
@@ -185,8 +185,8 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="col-lg-7">
-            <div class="chart-container">
+        <div class="col-lg-6">
+            <div style="overflow:auto;">
                 {% for k, v in plotly_plots.items %}
                     {% if k == plant.name %}
                         {% for key, val in v.items %}
@@ -200,8 +200,8 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="col-lg-12">
-            <div class="chart-container">
+        <div class="col-lg-6">
+            <div style="overflow:auto;">
                 {% for k, v in plotly_plots.items %}
                     {% if k == plant.name %}
                         {% for key, val in v.items %}
@@ -215,8 +215,8 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="col-lg-12">
-            <div class="chart-container">
+        <div class="col-lg-6">
+            <div style="overflow:auto;">
                 {% for k, v in plotly_plots.items %}
                     {% if k == plant.name %}
                         {% for key, val in v.items %}
@@ -230,8 +230,8 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="col-lg-12">
-            <div class="chart-container">
+        <div class="col-lg-6">
+            <div style="overflow:auto;">
                 {% for k, v in plotly_plots.items %}
                     {% if k == plant.name %}
                         {% for key, val in v.items %}
@@ -245,8 +245,8 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="col-lg-12">
-            <div class="chart-container">
+        <div class="col-lg-6">
+            <div style="overflow:auto;">
                 {% for k, v in plotly_plots.items %}
                     {% if k == plant.name %}
                         {% for key, val in v.items %}
