--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>
+<h1 class="text-center mb-5" style="color:#e7cd78;">
     Profile
 </h1>
 <div>
