--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,8 +1,8 @@
 <footer>
-  <p>
+  <p style="color:#e7cd78;">
     © 2023 Self Watering All Rights Reserved
   </p>
-  <p>
+  <p style="color:#e7cd78;">
     Developed by: Dhananjeyan Natarajan
   </p>
 </footer>
