--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class = 'reg-form'>
-    <h1>
+<div class = 'reg-form container text-center'>
+    <h1 class="text-white" style="padding-bottom:40px;">
     Login
     </h1>
     {% include 'partials/alerts.html' %}
     <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
+        <div class="form-group text-center" style="color:white;">
         {{ form.as_p }}
+        </div>
 
         <div class = 'form-row'>
             <input type = 'submit' value = 'submit'>
