--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg " style="background-color:#252323; border-bottom: 1px solid #e7cd78;">
 
             <div class="container-fluid">
 
@@ -15,13 +15,13 @@
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'reg_index'%}">Home</a>
+                        <a class="nav-link" style="color:#e7cd78; font-family: 'Glacial Indifference', sans-serif;" href="{% url 'reg_index'%}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profile' request.user.id %}">Profile</a>
+                        <a class="nav-link" style="color:#e7cd78; font-family: 'Glacial Indifference', sans-serif;" href="{% url 'profile' request.user.id %}">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:{document.querySelector('#logout').submit()}">Logout</a>
+                        <a class="nav-link" style="color:#e7cd78; font-family: 'Glacial Indifference', sans-serif;" href="javascript:{document.querySelector('#logout').submit()}">Logout</a>
                         <form id="logout" action="{% url 'logout' %}" method="post">
                             {% csrf_token %}
                             <input type="hidden">
@@ -29,19 +29,19 @@
                     </li>
                     {% if 'reg_index' in request.path %}
                     <li class="nav-item text-align-right">
-                        <a class="nav-link" href="#">Add NPK Sensor</a>
+                        <a class="nav-link" style="color:#e7cd78; font-family: 'Glacial Indifference', sans-serif;" href="#">Add NPK Sensor</a>
 
                     </li>
                     {% endif %}
 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'index' %}">Home</a>
+                        <a class="nav-link" style="color:#e7cd78; font-family: 'Glacial Indifference', sans-serif;" href="{% url 'index' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        <a class="nav-link" style="color:#e7cd78; font-family: 'Glacial Indifference', sans-serif;" href="{% url 'login' %}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Register</a>
+                        <a class="nav-link" style="color:#e7cd78; font-family: 'Glacial Indifference', sans-serif;" href="{% url 'register' %}">Register</a>
                     </li>
                     {% endif %}
                 </ul>
